feature/IVYPORTAL-16420-Make-Menu-Entry-Dashboard-Customizable-LE - Change the name of variable and fields